--- a/themes/apollo/layout/partial/head.jade
+++ b/themes/apollo/layout/partial/head.jade
@@ -9,6 +9,7 @@ block description
 
 meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="short icon", href=url_for(theme.favicon))
+link(rel="stylesheet", href=url_for("//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css"))
 link(rel="stylesheet", href=url_for("css/apollo.css"))
     
 if theme.googlefonts
