--- a/themes/apollo/layout/partial/nav.jade
+++ b/themes/apollo/layout/partial/nav.jade
@@ -1,7 +1,8 @@
 ul.nav.nav-list
-    each value, key in theme.menu
+    each value in theme.menu
         li.nav-list-item
             - var re = /^(http|https):\/\/*/gi;
             - var tar = re.test(value) ? "_blank" : "_self"
-            a.nav-list-link(class={active: is_home() && value === "/"} href=value target=tar)
-                != key.toUpperCase()
+            a.nav-list-link(class={active: is_home() && value === "/"} href=value.path target=tar)
+                i(class=value.icon) &nbsp;
+                != value.name
