--- a/themes/apollo/layout/partial/scripts.jade
+++ b/themes/apollo/layout/partial/scripts.jade
@@ -1,6 +1,9 @@
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
 
+//- Custom
+script(async src="js/index.js")
+
 //- Analytics tracking
 - var ga = theme.ga
 if ga
