--- a/themes/apollo/source/scss/_partial/post.scss
+++ b/themes/apollo/source/scss/_partial/post.scss
@@ -10,7 +10,7 @@
     }
 
     .post-info {
-        color: #7f8c8d;
+        color: #525252;
         margin: 1.2em 0;
         span {
             margin-left: 0.5rem;
