--- a/themes/apollo/source/scss/_partial/base.scss
+++ b/themes/apollo/source/scss/_partial/base.scss
@@ -9,12 +9,15 @@ html, body {
 }
 
 body {
+    // display: none;
     margin: 0;
     color: #34495e;
     font-size: 15px;
     line-height: 1.6;
-    background-color: #fff;
-    font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 1460px;
+    font-family: 'Source Sans Pro', 'Helvetica Neue',  Arial, sans-serif;
 }
 
 ul.nav,
