--- a/themes/apollo/source/scss/_partial/copyright.scss
+++ b/themes/apollo/source/scss/_partial/copyright.scss
@@ -5,7 +5,7 @@ footer {
         border-top: 1px solid #ddd;
         text-align: center;
         p, a {
-            color: #aaa;
+            color: #2c3e50;
             font-size: 14px;
             font-weight: 100;
         }
