--- a/themes/apollo/source/scss/_partial/mq.scss
+++ b/themes/apollo/source/scss/_partial/mq.scss
@@ -4,8 +4,10 @@ section.container {
 
 @media screen and (min-width: 700px) {
     .wrap {
+        background: rgba(255,255,255,0.75);
         width: 700px;
         margin: 0 auto;
+        padding: 10px;
     }
     header {
         padding: 20px 100px;
@@ -14,7 +16,9 @@ section.container {
 
 @media screen and (max-width: 700px) {
     .wrap {
+        background: rgba(231,221,240,0.5);
         width: 100%;
+        padding: 10px;        
     }
     header {
         padding: 20px 0;
