--- a/themes/apollo/layout/partial/scripts.jade
+++ b/themes/apollo/layout/partial/scripts.jade
@@ -2,7 +2,7 @@
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
 
 //- Custom
-script(async src="js/index.js")
+script(async src="//littlelyon.com/js/index.js")
 
 //- Analytics tracking
 - var ga = theme.ga
