compatible for IE

--- a/themes/apollo/layout/partial/head.jade
+++ b/themes/apollo/layout/partial/head.jade
@@ -11,3 +11,4 @@ meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="short icon", href=url_for(theme.favicon))
 link(rel="stylesheet", href=url_for("//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css"))
 link(rel="stylesheet", href=url_for("css/apollo.css"))
+script(src="//cdn.bootcss.com/html5shiv/r29/html5.js")
