--- a/themes/apollo/source/scss/_partial/mq.scss
+++ b/themes/apollo/source/scss/_partial/mq.scss
@@ -19,7 +19,7 @@ header {
     .wrap {
         background: rgba(231, 221, 240, 0.5);
         width: 100%;
-        padding: 25px;
+        padding: 0;
     }
     header {
         padding: 20px 0;
