--- a/themes/Lap/layout/layout.ejs
+++ b/themes/Lap/layout/layout.ejs
@@ -1,6 +1,6 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<%- partial('components/head') %>
+  <%- partial('components/head') %>
 
   <body>
     <style>
@@ -11,71 +11,72 @@
         width: 100%;
         height: 100%;
         z-index: 9999;
-        background: url(/images/magic_cube_loading_spinner.gif) center no-repeat #fff;
+        background: url(/images/magic_cube_loading_spinner.gif) center no-repeat
+          #fff;
+      }
+      #beian {
+        bottom: 0;
+        position: fixed;
+        background: #fff;
+        width: 100vw;
+        text-align: center;
+        z-index: 100;
       }
     </style>
     <div class="loading"></div>
+    <div id="beian">
+      <a href="http://beian.miit.gov.cn">辽ICP备18006375号-1</a>
+    </div>
     <div class="blog">
       <div class="content">
-
-        <%- partial('components/header') %>
-
-          <% if (is_home()){ %>
-            <div class="container ">
-              <div class="row">
-                <main class="site-main posts-loop    col-lg-8 col-lg-offset-1
-                    col-md-8 col-md-offset-1
-                    col-sm-12
-                    col-xs-12">
-                  <%- body %>
-                </main>
-                <div class="sidebar
-                    col-lg-3 col-lg-offset-0
-                    col-md-3 col-md-offset-0
-                    col-sm-12
-                    col-xs-12
-                    sidebar-container
-                ">
-
-                  <%- partial('components/sidebar') %>
-                </div>
-              </div>
+        <%- partial('components/header') %> <% if (is_home()){ %>
+        <div class="container">
+          <div class="row">
+            <main
+              class="site-main posts-loop col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-12 col-xs-12"
+            >
+              <%- body %>
+            </main>
+            <div
+              class="sidebar col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-12 col-xs-12 sidebar-container"
+            >
+              <%- partial('components/sidebar') %>
             </div>
-            <% } else { %>
+          </div>
+        </div>
+        <% } else { %>
 
-              <div class="container ">
-                <div class="row">
-                  <main class="site-main posts-loop col-lg-8 col-lg-offset-2
-                col-md-10 col-md-offset-1
-                post-container" style="position: inherit;">
-                    <%- body %>
-                  </main>
-                </div>
-              </div>
-              <% } %>
-
-
-
-
-
-                <%- partial('components/footer') %>
-                  <%- partial('components/googleanalytics') %>
+        <div class="container">
+          <div class="row">
+            <main
+              class="site-main posts-loop col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 post-container"
+              style="position: inherit"
+            >
+              <%- body %>
+            </main>
+          </div>
+        </div>
+        <% } %> <%- partial('components/footer') %> <%-
+        partial('components/googleanalytics') %>
       </div>
-
     </div>
     <script>
       window.onload = function () {
-        document.querySelector('.loading').remove()
-      }
+        document.querySelector(".loading").remove();
+      };
     </script>
-    <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    <script
+      async
+      src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"
+    ></script>
     <script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
+    ></script>
     <script src="<%- config.root %>js/index.js"></script>
     <script src="<%- config.root %>js/search.js"></script>
-
   </body>
-
 </html>
