feat: unify the font-family

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,4 +47,7 @@
         --color-border-main: 243 239 230;
     }
     */
+    body {
+        font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    }
 }
