--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -19,12 +19,7 @@ const { page } = Astro.props;
 const blog = page.data;
 ---
 
-<BaseLayout
-    title="Blog"
-    description="Embark on a journey of personal insights and experiences through my blog"
-    image={{ src: '/dante-preview.jpg', alt: 'The preview of the site' }}
-    showHeader={false}
->
+<BaseLayout title="Blog" description={siteConfig.description} image={siteConfig.image} showHeader={false}>
     <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">Blog Archive</h1>
     {blog.map((post) => <PostPreview post={post} class="mb-10 sm:mb-12" />)}
     <Pagination page={page} class="my-16 sm:my-24" />
