--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -18,12 +18,7 @@ const { page } = Astro.props;
 const portfolio = page.data;
 ---
 
-<BaseLayout
-    title="Portfolio"
-    description="Explore a diverse portfolio showcasing my passion and expertise"
-    image={{ src: '/dante-preview.jpg', alt: 'The preview of the site' }}
-    showHeader={false}
->
+<BaseLayout title="Portfolio" description="Explore a diverse portfolio showcasing my passion and expertise" image={siteConfig.image} showHeader={false}>
     <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">Projects</h1>
     {portfolio.map((project) => <ProjectPreview project={project} class="mb-10 sm:mb-12" />)}
     <Pagination page={page} class="my-16 sm:my-24" />
